--- a/index.html
+++ b/index.html
@@ -2,12 +2,13 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>SVG Preview Widget</title>
   <link rel="stylesheet" href="styles.css">
   <style>
+    .controls { display: flex; flex-wrap: wrap; gap: 1rem; align-items: center; }
     .controls label { flex: 1 1 120px; white-space: nowrap; }
-    canvas { cursor: default; }
+    canvas { cursor: default; display: block; margin-top: 1em; border: 1px solid #ccc; }
     #svgList li { display: flex; align-items: center; justify-content: space-between; padding: 0.3em; }
     #svgList .item-controls { display: flex; align-items: center; gap: 0.5em; }
     #svgList input[type="range"] { width: 100px; vertical-align: middle; }
@@ -19,11 +20,15 @@
   <div class="controls">
     <label>
       Length:
-      <select id="lengthSelect"><option value="">–</option></select>
+      <select id="lengthSelect">
+        <option value="">–</option>
+      </select>
     </label>
     <label>
       Width:
-      <select id="widthSelect" disabled><option value="">–</option></select>
+      <select id="widthSelect" disabled>
+        <option value="">–</option>
+      </select>
     </label>
     <span id="priceDisplay"></span>
     <button id="renderBtn">Render Canvas</button>
@@ -40,269 +45,212 @@
 
   <script>
   document.addEventListener('DOMContentLoaded', () => {
+    const variants = [
+      /* ... your 85 variants ... */
+      { length:4, width:4, price:12.00 }, /* etc. */ { length:36, width:12, price:50.00 }
+    ];
     const images = [];
     let selectedId = null;
     let dragging = false;
-    let dragOffset = { x: 0, y: 0 };
-    let handleCenter = { x: 0, y: 0 };
-    const DPI = 96;
-    const borderPx = 4;
+    let dragOffset = { x:0, y:0 };
+    let handleCenter = { x:0, y:0 };
+    const DPI = 96, borderPx = 4;
 
-    // Element references
-    const widthInput    = document.getElementById('widthInput');
-    const heightInput   = document.getElementById('heightInput');
-    const lenSel        = document.getElementById('lengthSelect');
-    const widSel        = document.getElementById('widthSelect');
-    const priceDisplay  = document.getElementById('priceDisplay');
-    const renderBtn     = document.getElementById('renderBtn');
-    const toggleOrient  = document.getElementById('toggleOrientation');
-    const exportBtn     = document.getElementById('exportBtn');
+    // Elements
+    const lenSel = document.getElementById('lengthSelect');
+    const widSel = document.getElementById('widthSelect');
+    const priceDisplay = document.getElementById('priceDisplay');
+    const renderBtn = document.getElementById('renderBtn');
+    const toggleBtn = document.getElementById('toggleOrientation');
+    const exportBtn = document.getElementById('exportBtn');
     const fileInputContainer = document.getElementById('fileInputContainer');
-    const fileInput     = document.getElementById('fileInput');
-    const svgList       = document.getElementById('svgList');
-    const canvas        = document.getElementById('mainCanvas');
-    const ctx           = canvas.getContext('2d');
+    const fileInput = document.getElementById('fileInput');
+    const svgList = document.getElementById('svgList');
+    const canvas = document.getElementById('mainCanvas');
+    const ctx = canvas.getContext('2d');
 
-    // Your Etsy variants
-    const variants = [
-      { length:4, width:4, price:12.00 }, { length:4, width:6, price:14.00 },
-      /* … all 85 variants … */
-      { length:36, width:12, price:50.00 }
-    ];
-
-    // Populate Length → Width selectors
-    function initSelectors() {
+    // Initialize selectors
+    (function initSelectors(){
       const lengths = [...new Set(variants.map(v=>v.length))].sort((a,b)=>a-b);
       lengths.forEach(l=>{
-        const o = document.createElement('option');
-        o.value = l; o.textContent = `${l}"`;
-        lenSel.appendChild(o);
+        const opt = document.createElement('option'); opt.value = l; opt.textContent = `${l}"`;
+        lenSel.append(opt);
       });
       lenSel.addEventListener('change', onLengthChange);
       widSel.addEventListener('change', updatePriceAndCanvas);
-    }
+    })();
 
-    function onLengthChange() {
+    function onLengthChange(){
       widSel.innerHTML = '<option value="">–</option>';
       priceDisplay.textContent = '';
       const L = parseInt(lenSel.value);
-      if (!L) { widSel.disabled = true; return; }
+      if(!L){ widSel.disabled = true; return; }
       widSel.disabled = false;
       const widths = variants.filter(v=>v.length===L).map(v=>v.width).sort((a,b)=>a-b);
       widths.forEach(w=>{
-        const o = document.createElement('option');
-        o.value = w; o.textContent = `${w}"`;
-        widSel.appendChild(o);
+        const opt = document.createElement('option'); opt.value = w; opt.textContent = `${w}"`;
+        widSel.append(opt);
       });
     }
 
-    function updatePriceAndCanvas() {
+    function updatePriceAndCanvas(){
       const L = parseInt(lenSel.value), W = parseInt(widSel.value);
-      const variant = variants.find(v=>v.length===L && v.width===W);
-      priceDisplay.textContent = variant
-        ? `Price: $${variant.price.toFixed(2)}`
-        : '';
-      if (variant) fileInputContainer.style.display = 'block';
-      // You can also call redrawAll(L, W) here, if you adapt redrawAll to accept those.
+      const v = variants.find(x=>x.length===L && x.width===W);
+      priceDisplay.textContent = v ? `Price: $${v.price.toFixed(2)}` : '';
+      if(v) fileInputContainer.style.display = 'block';
+      // now call redrawCanvas()
     }
 
-    // Core redraw
-    function redrawAll() {
-      const wIn = parseFloat(widthInput.value), hIn = parseFloat(heightInput.value);
-      if (!(wIn>0 && hIn>0)) { fileInputContainer.style.display='none'; return; }
-      fileInputContainer.style.display = 'block';
-      const wPx = Math.round(wIn*DPI), hPx = Math.round(hIn*DPI);
+    function redrawCanvas(){
+      const L = parseInt(lenSel.value), W = parseInt(widSel.value);
+      if(!(L && W)){ fileInputContainer.style.display='none'; return; }
+      const wPx=L*DPI, hPx=W*DPI;
       canvas.width = wPx + borderPx*2;
       canvas.height = hPx + borderPx*2;
-
       ctx.clearRect(0,0,canvas.width,canvas.height);
       ctx.fillStyle='#fff'; ctx.fillRect(0,0,canvas.width,canvas.height);
-      ctx.lineWidth = borderPx; ctx.strokeStyle='#000';
+      ctx.lineWidth=borderPx; ctx.strokeStyle='#000';
       ctx.strokeRect(borderPx/2,borderPx/2,wPx+borderPx,hPx+borderPx);
-
-      // Labels
       ctx.fillStyle='#000'; ctx.font='16px sans-serif';
-      ctx.textAlign='left';  ctx.fillText(`W: ${wIn}"`, borderPx+4, canvas.height-4);
-      ctx.textAlign='right'; ctx.fillText(`H: ${hIn}"`, canvas.width-borderPx-4, canvas.height-4);
-
-      // Draw SVGs
+      ctx.textAlign='left'; ctx.fillText(`L: ${L}"`,borderPx+4,canvas.height-4);
+      ctx.textAlign='right';ctx.fillText(`W: ${W}"`,canvas.width-borderPx-4,canvas.height-4);
       images.forEach(item=>{
-        const drawW = item.origW*item.fitScale*item.scalePercent;
-        const drawH = item.origH*item.fitScale*item.scalePercent;
-        ctx.drawImage(item.image, item.x, item.y, drawW, drawH);
+        const dW=item.origW*item.fitScale*item.scalePercent;
+        const dH=item.origH*item.fitScale*item.scalePercent;
+        ctx.drawImage(item.image,item.x,item.y,dW,dH);
       });
-
-      // Draw selection handle
-      if (selectedId) {
-        const item = images.find(i=>i.id===selectedId);
-        const drawW = item.origW*item.fitScale*item.scalePercent;
-        const drawH = item.origH*item.fitScale*item.scalePercent;
-        ctx.lineWidth=2; ctx.strokeStyle='red';
-        ctx.strokeRect(item.x,item.y,drawW,drawH);
-
-        // Handle circle
-        handleCenter.x = item.x + drawW/2;
-        handleCenter.y = item.y - 12;
-        ctx.beginPath();
-        ctx.arc(handleCenter.x, handleCenter.y, 6, 0, 2*Math.PI);
-        ctx.fillStyle='#3498db'; ctx.fill();
-        ctx.strokeStyle='#fff'; ctx.lineWidth=2; ctx.stroke();
+      if(selectedId){
+        const itm=images.find(i=>i.id===selectedId);
+        const dW=itm.origW*itm.fitScale*itm.scalePercent;
+        const dH=itm.origH*itm.fitScale*itm.scalePercent;
+        ctx.lineWidth=2;ctx.strokeStyle='red';ctx.strokeRect(itm.x,itm.y,dW,dH);
+        handleCenter.x=itm.x + dW/2;
+        handleCenter.y=itm.y - 12;
+        ctx.beginPath();ctx.arc(handleCenter.x,handleCenter.y,6,0,2*Math.PI);
+        ctx.fillStyle='#3498db';ctx.fill();ctx.strokeStyle='#fff';ctx.lineWidth=2;ctx.stroke();
       }
     }
 
-    // Update list with per‑SVG slider + delete
-    function updateList() {
-      svgList.innerHTML = '';
-      images.forEach((item,i)=>{
-        const li = document.createElement('li');
-        li.dataset.id = item.id;
-        if(item.id===selectedId) li.classList.add('selected');
-        const controls = document.createElement('div');
-        controls.className = 'item-controls';
-        const slider = document.createElement('input');
-        slider.type='range'; slider.min=10; slider.max=200;
-        slider.value = Math.round(item.scalePercent*100);
-        slider.dataset.id = item.id;
-        const del = document.createElement('button');
-        del.textContent='Delete'; del.dataset.id=item.id;
-        controls.append(slider, del);
-        li.textContent = `SVG ${i+1}`;
-        li.append(controls);
+    function updateList(){
+      svgList.innerHTML='';
+      images.forEach((itm,i)=>{
+        const li=document.createElement('li');li.dataset.id=itm.id;
+        if(itm.id===selectedId)li.classList.add('selected');
+        const ct=document.createElement('div');ct.className='item-controls';
+        const sl=document.createElement('input');sl.type='range';sl.min=10;sl.max=200;
+        sl.value=Math.round(itm.scalePercent*100);sl.dataset.id=itm.id;
+        const del=document.createElement('button');del.textContent='Delete';del.dataset.id=itm.id;
+        ct.append(sl,del);
+        li.textContent=`SVG ${i+1}`;li.append(ct);
         svgList.append(li);
       });
     }
 
-    function selectImage(id) {
-      selectedId = id;
-      updateList();
-      redrawAll();
-    }
+    function selectImage(id){ selectedId=id; updateList(); redrawCanvas(); }
 
-    // List event handlers
-    svgList.addEventListener('click', e=>{
-      const id = e.target.dataset.id;
-      if(!id) return;
-      if(e.target.tagName==='BUTTON') {
+    svgList.addEventListener('click',e=>{
+      const id=e.target.dataset.id; if(!id)return;
+      if(e.target.tagName==='BUTTON'){
         images.splice(images.findIndex(i=>i.id===id),1);
-        selectedId = images[0]?.id||null;
-        updateList(); redrawAll();
+        selectedId = images[0]?.id || null;
+        updateList(); redrawCanvas();
       }
     });
 
-    svgList.addEventListener('input', e=>{
-      if(e.target.type==='range') {
-        const item = images.find(i=>i.id===e.target.dataset.id);
-        item.scalePercent = e.target.value/100;
-        selectImage(item.id);
+    svgList.addEventListener('input',e=>{
+      if(e.target.type==='range'){
+        const itm=images.find(i=>i.id===e.target.dataset.id);
+        itm.scalePercent=e.target.value/100;
+        selectImage(itm.id);
       }
     });
 
-    // Render & orientation
-    renderBtn.addEventListener('click', redrawAll);
-    toggleOrient.addEventListener('click',()=>{
-      [widthInput.value,heightInput.value]=[heightInput.value,widthInput.value];
-      toggleOrient.textContent = toggleOrient.textContent.includes('Landscape')
+    renderBtn.addEventListener('click', redrawCanvas);
+
+    toggleBtn.addEventListener('click',()=>{
+      // swap selects
+      const a=lenSel.value; lenSel.value=widSel.value; onLengthChange(); widSel.value=a; updatePriceAndCanvas();
+      redrawCanvas();
+      toggleBtn.textContent = toggleBtn.textContent.includes('Landscape')
         ? 'Switch to Portrait' : 'Switch to Landscape';
-      const wIn=parseFloat(widthInput.value),
-            hIn=parseFloat(heightInput.value);
-      const wPx=Math.round(wIn*DPI), hPx=Math.round(hIn*DPI);
-      images.forEach(item=>{
-        item.fitScale = Math.min(wPx/item.origW, hPx/item.origH);
-        const drawW=item.origW*item.fitScale*item.scalePercent;
-        const drawH=item.origH*item.fitScale*item.scalePercent;
-        item.x = borderPx+(wPx-drawW)/2;
-        item.y = borderPx+(hPx-drawH)/2;
-      });
-      redrawAll();
     });
 
-    // Drag via handle
-    canvas.addEventListener('mousedown', e=>{
-      if(!selectedId) return;
+    // Drag only via handle
+    canvas.addEventListener('mousedown',e=>{
+      if(!selectedId)return;
       const r=canvas.getBoundingClientRect();
       const x=e.clientX-r.left, y=e.clientY-r.top;
       const dx=x-handleCenter.x, dy=y-handleCenter.y;
-      if(dx*dx+dy*dy<=6*6) {
+      if(dx*dx+dy*dy<=36){
         dragging=true;
-        const item=images.find(i=>i.id===selectedId);
-        dragOffset.x = x-item.x;
-        dragOffset.y = y-item.y;
+        const itm=images.find(i=>i.id===selectedId);
+        dragOffset={x:x-itm.x,y:y-itm.y};
         canvas.style.cursor='grabbing';
       }
     });
-    canvas.addEventListener('mousemove', e=>{
-      if(dragging) {
+    canvas.addEventListener('mousemove',e=>{
+      if(dragging){
         const r=canvas.getBoundingClientRect();
         const x=e.clientX-r.left, y=e.clientY-r.top;
-        const item=images.find(i=>i.id===selectedId);
-        item.x=x-dragOffset.x;
-        item.y=y-dragOffset.y;
-        redrawAll();
+        const itm=images.find(i=>i.id===selectedId);
+        itm.x=x-dragOffset.x; itm.y=y-dragOffset.y;
+        redrawCanvas();
       }
     });
-    ['mouseup','mouseleave'].forEach(ev=>
-      canvas.addEventListener(ev,()=>{
-        dragging=false; canvas.style.cursor='default';
-      })
-    );
+    ['mouseup','mouseleave'].forEach(ev=>canvas.addEventListener(ev,()=>{
+      dragging=false; canvas.style.cursor='default';
+    }));
 
-    // Single export button → SVG
-    exportBtn.addEventListener('click', ()=>{
-      const wIn=parseFloat(widthInput.value),
-            hIn=parseFloat(heightInput.value);
-      const wPx=Math.round(wIn*DPI), hPx=Math.round(hIn*DPI);
+    exportBtn.addEventListener('click',()=>{
+      const L=parseInt(lenSel.value), W=parseInt(widSel.value);
+      if(!(L&&W))return;
+      const wPx=L*DPI, hPx=W*DPI;
       const xmlns='http://www.w3.org/2000/svg';
       let svg=`<?xml version="1.0" encoding="UTF-8"?><svg xmlns="${xmlns}" width="${wPx+borderPx*2}" height="${hPx+borderPx*2}" viewBox="0 0 ${wPx+borderPx*2} ${hPx+borderPx*2}">`;
       svg+=`<rect x="${borderPx/2}" y="${borderPx/2}" width="${wPx+borderPx}" height="${hPx+borderPx}" fill="none" stroke="black" stroke-width="${borderPx}"/>`;
-      svg+=`<text x="${borderPx+4}" y="${hPx+borderPx*2-4}" font-family="sans-serif" font-size="16">W: ${wIn}"</text>`;
-      svg+=`<text x="${wPx+borderPx*2-4}" y="${hPx+borderPx*2-4}" font-family="sans-serif" font-size="16" text-anchor="end">H: ${hIn}"</text>`;
-      images.forEach(item=>{
-        const drawW=item.origW*item.fitScale*item.scalePercent;
-        const drawH=item.origH*item.fitScale*item.scalePercent;
-        const inner=new DOMParser().parseFromString(item.svgText,'image/svg+xml').documentElement.innerHTML;
-        svg+=`<svg x="${item.x}" y="${item.y}" width="${drawW}" height="${drawH}" viewBox="0 0 ${item.origW} ${item.origH}" xmlns="${xmlns}">${inner}</svg>`;
+      svg+=`<text x="${borderPx+4}" y="${hPx+borderPx*2-4}" font-family="sans-serif" font-size="16">L: ${L}"</text>`;
+      svg+=`<text x="${wPx+borderPx*2-4}" y="${hPx+borderPx*2-4}" font-family="sans-serif" font-size="16" text-anchor="end">W: ${W}"</text>`;
+      images.forEach(itm=>{
+        const dW=itm.origW*itm.fitScale*itm.scalePercent;
+        const dH=itm.origH*itm.fitScale*itm.scalePercent;
+        const inner=new DOMParser().parseFromString(itm.svgText,'image/svg+xml').documentElement.innerHTML;
+        svg+=`<svg x="${itm.x}" y="${itm.y}" width="${dW}" height="${dH}" viewBox="0 0 ${itm.origW} ${itm.origH}" xmlns="${xmlns}">${inner}</svg>`;
       });
       svg+='</svg>';
       const blob=new Blob([svg],{type:'image/svg+xml'});
       const url=URL.createObjectURL(blob);
-      const link=document.createElement('a');
-      link.href=url; link.download='canvas-export.svg'; link.click();
-      URL.revokeObjectURL(url);
+      const a=document.createElement('a');a.href=url;a.download='canvas-export.svg';a.click();URL.revokeObjectURL(url);
     });
 
-    // File input & initial selectors
-    fileInput.addEventListener('change', e=>{
+    fileInput.addEventListener('change',e=>{
       const files=Array.from(e.target.files);
-      const wIn=parseFloat(widthInput.value), hIn=parseFloat(heightInput.value);
-      if(!(wIn>0&&hIn>0)) return;
-      const wPx=Math.round(wIn*DPI), hPx=Math.round(hIn*DPI);
+      const L=parseInt(lenSel.value), W=parseInt(widSel.value);
+      if(!(L&&W))return;
+      const wPx=L*DPI, hPx=W*DPI;
       files.forEach(file=>{
-        const reader=new FileReader();
-        reader.onload=evt=>{
-          const svgText=evt.target.result;
+        const r=new FileReader();
+        r.onload=ev=>{
+          const svgText=ev.target.result;
           const doc=new DOMParser().parseFromString(svgText,'image/svg+xml');
           const svgEl=doc.documentElement;
           const origW=parseFloat(svgEl.getAttribute('width'))||parseFloat(svgEl.getAttribute('viewBox').split(' ')[2]);
           const origH=parseFloat(svgEl.getAttribute('height'))||parseFloat(svgEl.getAttribute('viewBox').split(' ')[3]);
-          const fitScale=Math.min(wPx/origW, hPx/origH);
+          const fitScale=Math.min(wPx/origW,hPx/origH);
           const drawW=origW*fitScale, drawH=origH*fitScale;
           const x=borderPx+(wPx-drawW)/2, y=borderPx+(hPx-drawH)/2;
           const id=Date.now()+'_'+Math.random();
           const blob=new Blob([svgText],{type:'image/svg+xml'});
           const url=URL.createObjectURL(blob);
-          const img=new Image();
-          img.onload=()=>{
+          const img=new Image(); img.onload=()=>{
             URL.revokeObjectURL(url);
             images.push({id,svgText,image:img,origW,origH,fitScale,scalePercent:1,x,y});
             selectImage(id);
           };
           img.src=url;
         };
-        reader.readAsText(file);
+        r.readAsText(file);
       });
     });
-
-    initSelectors();
   });
   </script>
 </body>
