--- a/index.html
+++ b/index.html
@@ -47,6 +47,81 @@
   document.addEventListener('DOMContentLoaded', () => {
     const variants = [
       /* ... your 85 variants ... */
+        { length: 4, width: 4, price: 12.00 },
+      { length: 4, width: 6, price: 14.00 },
+      { length: 4, width: 8, price: 16.00 },
+      { length: 4, width: 10, price: 18.00 },
+      { length: 4, width: 12, price: 20.00 },
+      { length: 6, width: 6, price: 15.00 },
+      { length: 6, width: 8, price: 17.00 },
+      { length: 6, width: 10, price: 19.00 },
+      { length: 6, width: 12, price: 21.00 },
+      { length: 8, width: 8, price: 19.00 },
+      { length: 8, width: 10, price: 21.00 },
+      { length: 8, width: 12, price: 23.00 },
+      { length: 10, width: 10, price: 22.00 },
+      { length: 10, width: 12, price: 24.00 },
+      { length: 12, width: 12, price: 28.00 },
+      { length: 14, width: 4, price: 22.00 },
+      { length: 14, width: 6, price: 24.00 },
+      { length: 14, width: 8, price: 26.00 },
+      { length: 14, width: 10, price: 28.00 },
+      { length: 14, width: 12, price: 30.00 },
+      { length: 16, width: 4, price: 24.00 },
+      { length: 16, width: 6, price: 25.00 },
+      { length: 16, width: 8, price: 27.00 },
+      { length: 16, width: 10, price: 29.00 },
+      { length: 16, width: 12, price: 31.00 },
+      { length: 18, width: 4, price: 26.00 },
+      { length: 18, width: 6, price: 28.00 },
+      { length: 18, width: 8, price: 30.00 },
+      { length: 18, width: 10, price: 32.00 },
+      { length: 18, width: 12, price: 34.00 },
+      { length: 20, width: 4, price: 28.00 },
+      { length: 20, width: 6, price: 30.00 },
+      { length: 20, width: 8, price: 32.00 },
+      { length: 20, width: 10, price: 34.00 },
+      { length: 20, width: 12, price: 36.00 },
+      { length: 22, width: 4, price: 30.00 },
+      { length: 22, width: 6, price: 32.00 },
+      { length: 22, width: 8, price: 34.00 },
+      { length: 22, width: 10, price: 36.00 },
+      { length: 22, width: 12, price: 38.00 },
+      { length: 24, width: 4, price: 30.00 },
+      { length: 24, width: 6, price: 32.00 },
+      { length: 24, width: 8, price: 34.00 },
+      { length: 24, width: 10, price: 36.00 },
+      { length: 24, width: 12, price: 38.00 },
+      { length: 26, width: 4, price: 32.00 },
+      { length: 26, width: 6, price: 34.00 },
+      { length: 26, width: 8, price: 36.00 },
+      { length: 26, width: 10, price: 38.00 },
+      { length: 26, width: 12, price: 40.00 },
+      { length: 28, width: 4, price: 34.00 },
+      { length: 28, width: 6, price: 36.00 },
+      { length: 28, width: 8, price: 38.00 },
+      { length: 28, width: 10, price: 40.00 },
+      { length: 28, width: 12, price: 42.00 },
+      { length: 30, width: 4, price: 36.00 },
+      { length: 30, width: 6, price: 38.00 },
+      { length: 30, width: 8, price: 40.00 },
+      { length: 30, width: 10, price: 42.00 },
+      { length: 30, width: 12, price: 44.00 },
+      { length: 32, width: 4, price: 38.00 },
+      { length: 32, width: 6, price: 40.00 },
+      { length: 32, width: 8, price: 42.00 },
+      { length: 32, width: 10, price: 44.00 },
+      { length: 32, width: 12, price: 46.00 },
+      { length: 34, width: 4, price: 40.00 },
+      { length: 34, width: 6, price: 42.00 },
+      { length: 34, width: 8, price: 44.00 },
+      { length: 34, width: 10, price: 46.00 },
+      { length: 34, width: 12, price: 48.00 },
+      { length: 36, width: 4, price: 42.00 },
+      { length: 36, width: 6, price: 44.00 },
+      { length: 36, width: 8, price: 46.00 },
+      { length: 36, width: 10, price: 48.00 },
+      { length: 36, width: 12, price: 50.00 },
       { length:4, width:4, price:12.00 }, /* etc. */ { length:36, width:12, price:50.00 }
     ];
     const images = [];
