--- a/index.html
+++ b/index.html
@@ -156,6 +156,10 @@
 
     // Populate Length selector with only valid price variants
     function initSelectors() {
+      // Unique lengths and widths with price
+      const lengths = [...new Set(variants.filter(v => v.price != null).map(v => v.length))].sort((a,b)=>a-b);
+      const widths = [...new Set(variants.filter(v => v.price != null).map(v => v.width))].sort((a,b)=>a-b);
+
       lenSel.innerHTML = '<option value="">–</option>';
       const lengths = [...new Set(variants.filter(v=>v.price != null).map(v=>v.length))].sort((a,b)=>a-b);
       lengths.forEach(l=>{
