--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
     </label>
     <label>
       Width:
-      <select id="widthSelect" disabled><option value="">–</option></select>
+      <select id="widthSelect"><option value="">–</option></select>
     </label>
     <span id="priceDisplay"></span>
     <button id="renderBtn">Render Canvas</button>
